syntax = "proto3";

package cict.common.v1;

option cc_enable_arenas = true;
option go_package = "github.com/cictapis/server-auth/cict/common/v1;common";

import "google/protobuf/descriptor.proto";

import "cict/common/v1/crud_policy.proto";

extend google.protobuf.MethodOptions {
  CrudPolicyEnum.CrudPolicy crudPolicy = 1000001;
}
