syntax = "proto3";

package cict.common.v1;

option cc_enable_arenas = true;
option go_package = "github.com/cictapis/cict-mail/cict/common/v1;common";

message EnumSystemRole {
  enum SystemRole {
    UNSPECIFIED = 0;
  
    USER = 1;
  
    ADMIN = 2;
  
    SUPPER_USER = 3;

    ORGANIZATION = 4;
  }
}
