syntax = "proto3";

package cict.service_auth.v1;

option cc_enable_arenas = true;
option go_package = "github.com/cictapis/cict-auth/cict/service_auth/v1;service_auth";
option java_multiple_files = true;
option java_outer_classname = "EnumAuthenticateThirdPartyProto";
option java_package = "com.github.cictapis.cict_auth.cict.service_auth.v1";

message EnumAuthenticateThirdParty {
  enum AuthenticateThirdParty {
    UNSPECIFIED = 0;
  
    GMAIL_ORGANIZATION = 1;
  
    REGIS = 2;
  }
}
