syntax = "proto3";

package cict.service_course.v1;

option cc_enable_arenas = true;
option go_package = "github.com/cictapis/cict-auth/cict/service_course/v1;service_course";

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";

import "cict/common/v1/annotations.proto";
import "cict/common/v1/paginate.proto";

service CourseTimetableDayService {
  rpc MutateCourseTimetableDay(MutateCourseTimetableDayRequest) returns (MutateCourseTimetableDayResponse) {
    option (google.api.http) = {
      post: "/api/service_course/v1/course_timetable_day/mutate",
      body: "*"
    };
    option (common.v1.cict) = {
      crud_policy: ADMIN,
    };
  }

  rpc GetCourseTimetableDay(GetCourseTimetableDayRequest) returns (GetCourseTimetableDayResponse) {
    option (google.api.http) = {
      get: "/api/service_course/v1/course_timetable_day/get"
    };
    option (common.v1.cict) = {
      crud_policy: ANYONE,
      system_api_exporter: CICT_SERVICE_COURSE_COURSE_TIMETABLE_DAY_GET_COURSE_TIMETABLE_DAY,
    };
  }

  rpc ListCourseTimetableDay(ListCourseTimetableDayRequest) returns (ListCourseTimetableDayResponse) {
    option (google.api.http) = {
      get: "/api/service_course/v1/course_timetable_day/list"
    };
    option (common.v1.cict) = {
      crud_policy: ANYONE,
      system_api_exporter: CICT_SERVICE_COURSE_COURSE_TIMETABLE_DAY_LIST_COURSE_TIMETABLE_DAY,
    };
  }
}

message MutateCourseTimetableDayRequest {
  google.protobuf.FieldMask update_mask = 4;

  oneof operation {
    CourseTimetableDay create = 1;

    CourseTimetableDay update = 2;

    CourseTimetableDay delete = 3;
  }
}

message MutateCourseTimetableDayResponse {
  uint64 mutated_id = 1;
}

message GetCourseTimetableDayRequest {
  uint64 id = 1;
}

message GetCourseTimetableDayResponse {
  CourseTimetableDay course_timetable_day = 1;
}

message ListCourseTimetableDayRequest {
  cict.common.v1.Paginate paginate = 1;
}

message ListCourseTimetableDayResponse {
  repeated CourseTimetableDay course_timetable_days = 1;
}

message CourseTimetableDay {
  // @gotags: gorm:"primaryKey"
  uint64 id = 1;

  // @gotags: gorm:"<-"
  uint32 day = 2;

  // @gotags: gorm:"<-"
  bool active = 3;

  // Belong to relationship CourseTimetableWeek
  uint64 course_timetable_week_id = 4;

  // @gotags: gorm:"autoUpdateTime:nano"
  int64 updated_at = 5;

  // @gotags: gorm:"autoCreateTime:nano"
  int64 created_at = 6;
}
