syntax = "proto3";

package cict.service_course.v1;

option cc_enable_arenas = true;
option go_package = "github.com/cictapis/cict-mail/cict/service_course/v1;service_course";

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";

import "cict/common/v1/annotations.proto";
import "cict/common/v1/paginate.proto";

service ExamScheduleService {
  rpc MutateExamSchedule(MutateExamScheduleRequest) returns (MutateExamScheduleResponse) {
    option (google.api.http) = {
      post: "/api/service_course/v1/exam_schedule/mutate",
      body: "*"
    };
    option (common.v1.cict) = {
      crud_policy: ADMIN,
    };
  }

  rpc GetExamSchedule(GetExamScheduleRequest) returns (GetExamScheduleResponse) {
    option (google.api.http) = {
      get: "/api/service_course/v1/exam_schedule/get",
    };
    option (common.v1.cict) = {
      crud_policy: AUTH,
    };
  }

  rpc ListExamSchedule(ListExamScheduleRequest) returns (ListExamScheduleResponse) {
    option (google.api.http) = {
      get: "/api/service_course/v1/exam_schedule/post",
    };
    option (common.v1.cict) = {
      crud_policy: AUTH,
    };
  }

  rpc GetUpcomingExamSchedule(GetUpcomingExamScheduleRequest) returns (GetUpcomingExamScheduleResponse) {
    option (google.api.http) = {
      get: "/api/service_course/v1/exam_schedule/get_upcoming"
    };
    option (common.v1.cict) = {
      crud_policy: AUTH,
    };
  }
}

message MutateExamScheduleRequest {
  google.protobuf.FieldMask update_mask = 4;

  oneof operation {
    ExamSchedule create = 1;

    ExamSchedule update = 2;

    ExamSchedule delete = 3;
  }
}

message MutateExamScheduleResponse {
  string mutatedId = 1;
}

message GetExamScheduleRequest {
  string id = 1;
}

message GetExamScheduleResponse {
  ExamSchedule course = 1;
}

message ListExamScheduleRequest {
  cict.common.v1.Paginate paginate = 1;
}

message ListExamScheduleResponse {
  repeated ExamSchedule courses = 1;
}

message GetUpcomingExamScheduleRequest {
  string course_id = 1;
}

message GetUpcomingExamScheduleResponse {
  repeated ExamSchedule exam_schedules = 1;
}

message ExamSchedule {
  // @gotags: gorm:"primary_key;type:varchar(36);default:(uuid())"
  string id = 1;

  // @gotags: gorm:"<-"
  string name = 2;

  // @gotags: gorm:"<-"
  string description = 3;

  // @gotags: gorm:"<-"
  string exam_date = 4;

  // Belong to relationships Course
  string course_id = 5;

  // @gotags: gorm:"autoUpdateTime:nano"
  int64 updated_at = 6;

  // @gotags: gorm:"autoCreateTime:nano"
  int64 created_at = 7;
}
